--- a/less/about-page.less
+++ b/less/about-page.less
@@ -51,7 +51,7 @@
         position: absolute;
         bottom: 0;
         right: 0;
-        width: 40%;
+        width: 39%;
         
         .logo {
             margin: 0 2.4rem 0 0;
@@ -59,6 +59,7 @@
 
         .logo img {
             width: 100%;
+            max-height: 550px;
         }
     }
 }
